libmp4tag Change Log

1.0.1 alpha 2023-8-17


1.0.0 alpha 2023-8-17

- initial release
  tags cannot be written