@@ -3,8 +3,8 @@ libmp4tag
   libmp4tag is a library to read and write MP4 tags.
 
   The goal is to have a library where all tags can be accessed and
-  modified and any tags or custom tags are never lost when the audio
-  file is updated.
+  modified and any tags, unknown tags or custom tags are never lost
+  when the audio file is updated.
 
   A command line utility is included to display or change the tags.
 
@@ -46,6 +46,7 @@ Using the mp4tagcli executable:
 
   Setting a tag:
     ./mp4tagcli filename.m4a nam=My-Title
+    ./mp4tagcli filename.m4a trkn='(2,5)'
   Setting multiple tags:
     ./mp4tagcli filename.m4a nam=My-Title gnr=Country
   Setting a custom tag:
@@ -56,5 +57,7 @@ Using the mp4tagcli executable:
   Setting binary data:
     ./mp4tagcli filename.m4a covr=pic.png
     ./mp4tagcli filename.m4a --binary -- ----:MYAPP:ALTERNATE=filename.dat
+  Deleting a tag:
+    ./mp4tagcli filename.m4a nam=
   Deleting all tags:
     ./mp4tagcli filename.m4a --clean
